Modified templates to display posts from database.

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -7,18 +7,13 @@
             <h1><a href="/">BLOG oslavi bog Kim Namjoona</a></h1>
         </div>
 
-        <div>
-            <p>published: 02.07.2021, 20:30</p>
-            <h2><a href="">Самая жуткая ссора BTS: почему Шуга гневно бросил синтезатор в Чимина?</a></h2>
-            <p>Однажды Чимин подбежал к Шуге для того, чтобы подарить ему пианино, нарисованное на листе бумаги. Юнги заинтересовался картинкой, но когда схватил ее, понял, что краска с черных клавиш осталась на пальцах и въелась в кожу. Тогда он гневно бросил листок с рисунком на пол и посмотрел на Мочи. Мы все прекрасно понимаем, что Чим специально сделал это!</p>
-        </div>
+        {% for post in posts %}
+            <div>
+                <p>published: {{ post.published_date }}</p>
+                <h1><a href="">{{ post.title }}</a></h1>
+                <p>{{ post.text|linebreaksbr }}</p>
+            </div>
+        {% endfor %}
 
-        <div>
-            <p>published: 02.07.2021, 20:30</p>
-            <h2><a href="">Дело раскрыто: стало известно, почему Джина так любят бабушки 70 лет</a></h2>
-            <p>Наконец-то стало понятно, чем же парень привлекает внимание пенсионеров. Недавно несколько бабушек, которым больше 70 лет, сели и выбрали главного айдола, который им нравится. Конечно же, победил в этой борьбе Джин.
-              <br>
-               Одна бабушка заявила, что он точно протянет руку помощи нуждающимся, если попадет в такую ситуацию, например, донесет тяжелое вместо нее. А другая женщина отметила, что Джин, наверняка, очень уважительно относится к пенсионерам. «Я думаю, этот парень хорошо относится ко взрослым», – заявила поклонница Джина.</p>
-        </div>
     </body>
 </html>
